crates/ulf-tui/tests/snapshots/integration_snapshots__footer_with_alert.snap
---
source: crates/ulf-tui/tests/integration_snapshots.rs
expression: harness.render_footer()
---
──────────────────────────────────────────────────────────────────────────────── ▶ New: iter 3 │ Total Time Elapsed: 00:00                          ◉ ACTIVE
