crates/ulf-tui/tests/snapshots/integration_snapshots__header_iter2.snap
---
source: crates/ulf-tui/tests/integration_snapshots.rs
expression: harness.render_header()
---
[iter 1/0] [TIME] | 📋 Planner | [LIVE] | ? help                                  ────────────────────────────────────────────────────────────────────────────────
